--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -7,6 +7,7 @@
     tools:context="com.emil.linksy.presentation.ui.navigation.feed.FeedFragment">
 
 <com.google.android.material.textview.MaterialTextView
+    android:id="@+id/tv_recommendations_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/recommendations"
