--- a/app/src/main/res/layout/video_player_dialog.xml
+++ b/app/src/main/res/layout/video_player_dialog.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.media3.ui.PlayerView
-        android:id="@+id/pv_video"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        tools:ignore="MissingConstraints" />
 
-    <ImageButton
-        android:id="@+id/ib_fullscreen"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_fullscreen"
-        android:background="?attr/selectableItemBackground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="5dp"
-        tools:ignore="MissingConstraints" />
+
+
+
+
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/closeButton"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_gravity="end"
+            android:layout_margin="20dp"
+            app:backgroundTint="@android:color/white"
+            android:background="@drawable/ic_close_3">
+
+        </ImageButton>
+    </androidx.media3.ui.PlayerView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
