--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -152,6 +152,8 @@
 
     <style name="FullScreenDialog" parent="Theme.Linksy">
         <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:fitsSystemWindows">false</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
 
