--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -70,7 +70,8 @@
                     app:layout_constraintTop_toBottomOf="@id/tb"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    tools:ignore="NotSibling" />
 
                 <ImageView
                     android:id="@+id/iv_avatar"
